fixed gap on cart page cards

--- a/src/App.css
+++ b/src/App.css
@@ -42,3 +42,7 @@
 /* .checkoutBtn{
   margin-left: 10%;
 } */
+
+.card{
+  margin-bottom: 2%;
+}
